# monophony

./: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  DONATE.md  INSTALL.md  README.md  monophony.doap
source/: LICENSE  Makefile  pyproject.toml
source/data/: manifest.json  manifest.yml  metainfo.xml  monophony.desktop  monophony.flatpakref  python3-modules.json
source/locales/: all.pot
source/locales/be/: be.mo  be.po
source/locales/cs/LC_MESSAGES/: all.mo  all.po
source/locales/de/LC_MESSAGES/: all.mo  all.po
source/locales/en_GB/LC_MESSAGES/: all.mo  all.po
source/locales/fr/LC_MESSAGES/: all.mo  all.po
source/locales/it/LC_MESSAGES/: all.mo  all.po
source/locales/ja/LC_MESSAGES/: all.mo  all.po
source/locales/nl/LC_MESSAGES/: all.mo  all.po
source/locales/pl/LC_MESSAGES/: all.mo  all.po
source/locales/pt_BR/LC_MESSAGES/: all.mo  all.po
source/locales/ru/LC_MESSAGES/: all.mo  all.po
source/locales/sv/LC_MESSAGES/: all.mo  all.po
source/locales/tr/LC_MESSAGES/: all.mo  all.po
source/monophony/: __init__.py
source/monophony/backend/: cache.py  history.py  mpris.py  player.py  playlists.py  settings.py  sponsorblock.py  yt.py
source/monophony/frontend/: app.py
source/monophony/frontend/pages/: artist_page.py  library_page.py  queue_page.py  results_page.py  search_page.py
source/monophony/frontend/popovers/: local_song_popover.py  queue_song_popover.py  song_popover.py
source/monophony/frontend/rows/: artist_row.py  external_group_row.py  group_row.py  importable_group_row.py  local_group_row.py  local_song_row.py  locked_group_row.py  queue_song_row.py  song_row.py
source/monophony/frontend/tabs/: library_tab.py  queue_tab.py  search_tab.py
source/monophony/frontend/widgets/: artist_row.py  big_spinner.py  group_row.py  player.py  progress_bar.py  recent_searches.py  song_popover.py  song_row.py
(+8 files in other folders)
