[project]
name = "monophony"
dynamic = ["version"]
requires-python = ">=3.11"

[tool.ruff]
builtins = ['_']
lint.extend-ignore = ['E4', 'E74', 'E722']
lint.extend-select = [
	'ARG', 'Q', 'E5', 'PERF', 'INP', 'PLC', 'FA', 'RUF', 'UP', 'ISC'
]
line-length = 88
indent-width = 4

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
docstring-quotes = 'single'
multiline-quotes = 'single'
