[project]
name = 'monophony'
dynamic = ['version']
authors = [{name = 'Zehkira'}]
license = {file = 'LICENSE'}
requires-python = '>=3.11'
dependencies = ['mpris_server==0.4.2', 'ytmusicapi']

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ['monophony*']

[tool.ruff]
builtins = ['_']
lint.extend-ignore = ['E4', 'E74', 'E722']
lint.extend-select = [
	'ARG', 'Q', 'E5', 'PERF', 'INP', 'PLC', 'FA', 'RUF', 'UP', 'ISC'
]
line-length = 88
indent-width = 4

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
docstring-quotes = 'single'
multiline-quotes = 'single'
